--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ nav {
   background: #494f52;
   font-family: sans-serif;
   font-size: 30;
+  margin-bottom: 30px;
 }
 
 .nav-links {
@@ -14,6 +15,29 @@ nav {
   justify-content: space-around;
   align-items: center;
   list-style-type: none;
+}
+
+.products-container {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.products-item {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.item-tile {
+  width: 300px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+img {
+  margin-left: -20px;
+  margin-top: 20px;
 }
 
 /*# sourceMappingURL=App.css.map */
