--- a/src/style.sass
+++ b/src/style.sass
@@ -9,6 +9,7 @@ nav
     background: rgb(73,79,82)
     font-family: sans-serif
     font-size: 30
+    margin-bottom: 30px
     
 
 .nav-links
@@ -17,3 +18,23 @@ nav
     justify-content: space-around
     align-items: center
     list-style-type: none
+
+.products-container
+    display: flex
+    width: 100%
+    flex-wrap: wrap
+    justify-content: space-around
+
+.products-item
+    text-align: center
+    margin-bottom: 30px
+
+
+.item-tile
+    width: 300px
+    text-align: center
+    margin-bottom: 10px
+
+img
+    margin-left: -20px
+    margin-top: 20px
