--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+.home {
+  background: url(images/better.png);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-baackground-size: cover;
+  background-size: cover;
+  height: 100vh;
+  width: 100vws;
+}
+
 nav {
   display: flex;
   justify-content: space-around;
@@ -7,6 +17,9 @@ nav {
   font-family: sans-serif;
   font-size: 30;
   margin-bottom: 30px;
+  width: 100vw;
+  margin-top: -10px;
+  margin-left: -10px;
 }
 
 .nav-links {
