--- a/src/style.sass
+++ b/src/style.sass
@@ -1,5 +1,16 @@
+body
+    
 
 
+.home
+    background: url(images/better.png)
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    -o-baackground-size: cover
+    background-size: cover
+    height: 100vh
+    width: 100vws
+    
 
 nav
     display: flex
@@ -10,6 +21,9 @@ nav
     font-family: sans-serif
     font-size: 30
     margin-bottom: 30px
+    width: 100vw
+    margin-top: -10px
+    margin-left: -10px
     
 
 .nav-links
