--- a/src/style.sass
+++ b/src/style.sass
@@ -3,6 +3,7 @@
     
 body
     font-family: 'Roboto'
+    background-color: #f1f1f1
     
 @media only screen and (max-width:1200px)
 .home
@@ -43,19 +44,19 @@ body
     margin-left: -10px
 
 
+
 nav
     display: flex
     justify-content: space-around
     align-items: center
     min-height: 10vh 
     background: rgb(73,79,82, .9)
-    font-family: sans-serif
-    margin-bottom: 30px
     width: 100vw
     margin-top: -10px
     margin-left: -10px
     font-family: 'Bebas Neue'
     font-size: 1.5rem
+    margin-bottom: 30px
     
 
 .nav-links
@@ -72,12 +73,15 @@ nav
     justify-content: space-around
     max-width: 1600px
     margin: auto
+    
+    padding-top: 30px
+
+
+
    
 
 .products-item
     text-align: center
-    margin-bottom: 30px
-    
 
 
 .item-tile
@@ -85,11 +89,21 @@ nav
     text-align: center
     margin-bottom: 10px
     transition-property: all
-    transition-duration: .05s
+    transition-duration: .1s
+    border: 1px solid #cccccc
+    box-shadow: 3px 3px 10px #cccccc
+    background-color: white
+
+.item-info
+    border-top: 1px solid #cccccc
+    padding: 10px
+    font-size: 16px
+    background-color: #f1f1f1
+    
+
 
 .item-tile:hover
-    box-shadow: 1px 1px 3px #555555
-    transform: scale(1.05)
+    transform: scale(1.009)
 
 .guitar-img
     height: 370px
@@ -97,20 +111,23 @@ nav
 
 
 img
-    margin-left: -20px
-    margin-top: 20px
+    padding-left: -20px
+    padding-top: 20px
+.details-item
+    background-color: white
+    height: 425px
 
 .details
     display: flex
     width: 100%
     flex-wrap: wrap
-    justify-content: center
+    justify-content: space-evenly
 .details-container
     text-align: center
     width: 100%
 .description
     width: 300px
-    align-self: center
+    text-align: left
     padding: 30px
 .left-modifier
     width: 30px
@@ -133,12 +150,25 @@ img
     margin-bottom: 10px
     margin-top: 10px
 
+.description-box
+    border: 1px solid #cccccc
+    font-size: 20px
+    box-shadow: 3px 3px 10px #cccccc
+    background-color: white
+.description-title
+    border-bottom: 1px solid #cccccc
+    height: 30px
+.details-item
+    box-shadow: 3px 3px 10px #cccccc
+    border: 1px solid #cccccc
+
+
 .hide 
     display: none
 .show 
   display: block
 .modal 
-  width: 500px
+  width: 300px
   position: relative
   margin: 0px auto
   padding: 20px
