--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ img {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .details-container {
@@ -170,6 +170,7 @@ img {
   font-size: 20px;
   box-shadow: 3px 3px 10px #cccccc;
   background-color: white;
+  margin-top: 10px;
 }
 
 .description-title {
