--- a/src/style.sass
+++ b/src/style.sass
@@ -121,7 +121,7 @@ img
     display: flex
     width: 100%
     flex-wrap: wrap
-    justify-content: space-evenly
+    justify-content: space-around
 .details-container
     text-align: center
     width: 100%
@@ -155,6 +155,7 @@ img
     font-size: 20px
     box-shadow: 3px 3px 10px #cccccc
     background-color: white
+    margin-top: 10px
 .description-title
     border-bottom: 1px solid #cccccc
     height: 30px
