finished styling for now

--- a/src/style.sass
+++ b/src/style.sass
@@ -148,8 +148,10 @@ img
     outline: none
 
 .quantity-input
-    margin-bottom: 10px
-    margin-top: 10px
+    padding-bottom: 10px
+    padding-top: 10px
+    display: flex
+    justify-content: center
 
 .description-box
     border: 1px solid #cccccc
