--- a/src/App.css
+++ b/src/App.css
@@ -162,8 +162,10 @@ img {
 }
 
 .quantity-input {
-  margin-bottom: 10px;
-  margin-top: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .description-box {
